[tool.poetry]
name = "pyside6-examples"
version = "0.1.0"
description = "PySide6 examples"
authors = ["b-basa <basaranoguzburak@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, < 3.13"
PySide6 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
